--- a/core/templates/index_professor.html
+++ b/core/templates/index_professor.html
@@ -2,6 +2,51 @@
 
 {% load static %}
 
+{% block menu %}
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">Certificado-BR</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Inicio <span class="sr-only">(página atual)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Alunos</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Menu
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Cadastrar aluno</a>
+          <a class="dropdown-item" href="#">Cadastrar certificado</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Lista de certificados</a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Sair</a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
+    </form>
+  </div>
+</nav>
+{% endblock %}
+
 {% block main %}
-<h1>Professor</h1>
+<div class="jumbotron">
+  <h1 class="display-4">Olá, {{ user }}!</h1>
+  <p class="lead">Gerar certificado para seus alunos nunca foi tão facil!</p>
+  <hr class="my-4">
+  <p>Comece já a utilizar nosso serviço.</p>
+  <a class="btn btn-dark btn-lg" href="#" role="button">Cadastrar Aluno</a>
+  <a class="btn btn-dark btn-lg" href="#" role="button">Emitir Certificado</a>
+</div>
 {% endblock %}
