--- a/core/templates/base_aluno.html
+++ b/core/templates/base_aluno.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 {% load static %}
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=500, initial-scale=1">
-    <title>Title</title>
+    <title>index</title>
     <link rel="stylesheet" media="all" href="{% static 'core/css/bootstrap.css' %}" type="text/css"
         charset="utf-8">
 </head>
 <body>
 {% block menu %} {% endblock %}
-
 {% block main %} {% endblock %}
 <!--<script src="{% static 'jquery/dist/jquery.js'%}"></script>-->
 <script src="{% static 'js/bootstrap.js'%}"></script>
