--- a/core/templates/pdf.html
+++ b/core/templates/pdf.html
@@ -58,12 +58,13 @@
       line-height: 30px;
       font-size: 20px;
       font-weigth: bold;
-      margin-top: 150px;
-      border-bottom: solid 2px;
-      left: 38%;
+      margin-top: 400px;
+      left: 20%;
       margin-right: -50%;
       ">
-
+     <span style="border-bottom: 2px solid">{{ certificado.criado_em }}</span>
+     <br>
+    <span >Data</span>
 </p>
 
 <p style="position: absolute;
@@ -73,11 +74,13 @@
       line-height: 30px;
       font-size: 25px;
       font-weigth: bold;
-      margin-top: 100px;
-      left: 10%;
+      margin-top: 310px;
+      left: 50%;
       margin-right: -50%;
 
       ">
+    <span style="border-bottom: 2px solid">{{ certificado.coordenador }}</span>
+    <br> <span style="font-size: 16px; font-style: italic;">Coordernador</span>
 </p>
 
  <p style="position: absolute;
