--- a/core/templates/pdf.html
+++ b/core/templates/pdf.html
@@ -1,7 +1,7 @@
 {% load static %}
 <html>
  <head>
-   <title>Test</title>
+   <title>PDF Certificado</title>
    <style>
      h1 {
        text-align: center;
@@ -75,7 +75,7 @@
       font-size: 25px;
       font-weigth: bold;
       margin-top: 310px;
-      left: 50%;
+      left: 55%;
       margin-right: -50%;
 
       ">
@@ -83,19 +83,6 @@
     <br> <span style="font-size: 16px; font-style: italic;">Coordernador</span>
 </p>
 
- <p style="position: absolute;
-      color:#000;
-      text-align: center;
-      top: 140px;
-      line-height: 30px;
-      font-size: 25px;
-      font-weigth: bold;
-      margin-top: 150px;
-      left: 10%;
-      margin-right: -50%;
-
-      ">
-</p>
 
  </body>
 </html>
