--- a/core/templates/certificados.html
+++ b/core/templates/certificados.html
@@ -12,30 +12,27 @@
     <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item ">
-                <a class="nav-link" href="#">Inicio <span class="sr-only">(página atual)</span></a>
+                <a class="nav-link" href="{% url 'index' %}">Inicio <span class="sr-only">(página atual)</span></a>
             </li>
-            <li class="nav-item active" >
-                <a class="nav-link" href="#">Alunos</a>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'alunos' %}">Alunos</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Menu
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Cadastrar aluno</a>
-                    <a class="dropdown-item" href="#">Cadastrar certificado</a>
+                    <a class="dropdown-item" href="{% url 'cadastrar_aluno' %}">Cadastrar aluno</a>
+                    <a class="dropdown-item" href="{% url 'cadastrar_certificado' %}">Cadastrar certificado</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Lista de certificados</a>
+                    <a class="dropdown-item" href="{% url 'certificados' %}">Lista de certificados</a>
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Sair</a>
+                <a class="nav-link" href="{% url 'logout' %}">Sair</a>
             </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
-        </form>
+
     </div>
 </nav>
 {% endblock %}
@@ -52,19 +49,24 @@
               <th scope="col">Instituição de ensino</th>
               <th scope="col">Curso</th>
               <th scope="col">Carga Horaria</th>
+              <th scope="col">Imprimir</th>
             </tr>
           </thead>
           <tbody>
+           {% for certificado in certificados %}
             <tr>
-                {% for certificado in certificados %}
+
                     <td> {{ certificado.aluno }}</td>
                     <td> {{ certificado.codigo }}</td>
                     <td> {{ certificado.faculdade }} </td>
                     <td> {{ certificado.curso }} </td>
                     <td> {{ certificado.carga_horaria }} </td>
-                {% endfor %}
-            </tr>
+                    <td>
+                        <a href="{% url 'pdf' certificado.id %}"> <img src="https://img.icons8.com/android/24/000000/print.png"> </a>
+                    </td>
 
+            </tr>
+            {% endfor %}
           </tbody>
         </table>
     </div>
