--- a/core/templates/index_aluno.html
+++ b/core/templates/index_aluno.html
@@ -2,6 +2,39 @@
 
 {% load static %}
 
+{% block menu %}
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="{% url 'index' %}">Certificado-BR</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="{% url 'index' %}">Inicio <span class="sr-only">(página atual)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'aluno_certificado' %}">Meus certificados</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'aluno_dados' %}">Meus Dados</a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'logout' %}">Sair</a>
+            </li>
+        </ul>
+
+    </div>
+</nav>
+{% endblock %}
+
 {% block main %}
-<h1>aluno</h1>
+<div class="jumbotron">
+  <h1 class="display-4">Olá, {{ user }}!</h1>
+  <p class="lead">Imprima seu certificado de onde estiver. </p>
+  <hr class="my-4">
+
+</div>
 {% endblock %}
