--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=500, initial-scale=1">
-    <title>Title</title>
+    <title>{% block title %} {% endblock %}</title>
     <link rel="stylesheet" media="all" href="{% static 'core/css/bootstrap.css' %}" type="text/css"
         charset="utf-8">
 </head>
