--- a/core/templates/registration/login.html
+++ b/core/templates/registration/login.html
@@ -55,7 +55,7 @@
   <div class="box">
       <form action="{% url 'login' %}" method="post">
           {% csrf_token %}
-          <h1 class="h2">Login</h1>
+          <h1 class="h2">Certificado-BR</h1>
           <label for="login">Usuario</label>
           <input type="text" id="login" class="form-control" name="username" placeholder="Login" required>
           <label for="senha">Senha</label>
