--- a/core/templates/certificados.html
+++ b/core/templates/certificados.html
@@ -41,6 +41,7 @@
 <div class="row pt-5"></div>
 <div class="row pt-5">
     <div class="container">
+        <h5>Lista de Certificados</h5>
         <table class="table table-striped table-sm">
           <thead class="thead-dark">
             <tr>
