alterar dados e senha

--- a/core/templates/alterar_senha.html
+++ b/core/templates/alterar_senha.html
@@ -1,5 +1,17 @@
 {% extends "base.html" %}
 
+{% load static %}
+
 {% block main %}
-alteração de senha
+<div class="modal-div"></div>
+<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" id="senhaModal" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+
+            <div class="modal-body">
+                <h1>AAAAAAAAA</h1>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
