--- a/core/templates/cadastro.html
+++ b/core/templates/cadastro.html
@@ -63,19 +63,19 @@
                 </div>
                 <div class="col-12 p-2">
                     <label for="lblnome">Nome</label>
-                    <input type="text" class="form-control" id="lblnome" name="nome" placeholder="Nome Completo" required>
+                    <input type="text" class="form-control" id="lblnome" onkeyup="this.value = this.value.toUpperCase();" name="nome" placeholder="Nome Completo" required>
                 </div>
                 <div class="col-4 p-2">
                     <label for="lblcidade">Cidade</label>
-                    <input type="text" class="form-control" id="lblcidade" name="cidade" placeholder="Cidade" required>
+                    <input type="text" class="form-control" id="lblcidade" onkeyup="this.value = this.value.toUpperCase();" name="cidade" placeholder="Cidade" required>
                 </div>
                 <div class="col-4 p-2">
                     <label for="lblestado">Estado</label>
-                    <input type="text" class="form-control" id="lblestado" name="estado" placeholder="Estado" required>
+                    <input type="text" class="form-control" id="lblestado" onkeyup="this.value = this.value.toUpperCase();" name="estado" placeholder="Estado" required>
                 </div>
                 <div class="col-4 p-2">
                     <label for="lblcurso">Curso</label>
-                    <input type="text" class="form-control" id="lblcurso" name="curso" placeholder="Curso" required>
+                    <input type="text" class="form-control" id="lblcurso" onkeyup="this.value = this.value.toUpperCase();" name="curso" placeholder="Curso" required>
                 </div>
             </div>
              <button class="btn btn-primary mt-3">Cadastrar</button>
